# spark-pulse

./: .env.example  .gitignore  ecosystem.config.cjs  next.config.ts  package-lock.json  package.json  pyproject.toml  vitest.config.ts
.github/workflows/: ci.yml
api/: main.py
api/core/: cache.py  config.py  db.py
api/engine/: __init__.py  builder_mongo.py  builder_sql.py  executor.py  models.py  parser.py  schema.py
api/models/: sales.py
api/queries/: sales.py
api/routers/: query.py  sales.py
src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
src/components/charts/: daily-revenue-by-store-chart.tsx  daily-revenue-chart.tsx  sales-trend-chart.tsx  trend-detail-table.tsx  weekly-yoy-chart.tsx
src/components/ui/: theme-toggle.tsx
src/lib/constants/: store-colors.ts
src/lib/hooks/: use-pulse-query.ts
src/lib/types/: index.ts
src/lib/utils/: formatters.test.ts  formatters.ts
tests/api/: test_health.py
